--- a/src/Tests/Samples.CustomOptions.verified.html
+++ b/src/Tests/Samples.CustomOptions.verified.html
@@ -1,6 +1,10 @@
-﻿<h3 data-number="3.0.1"><span class="header-section-number">3.0.1</span>
+﻿<section data-number="0.0.1">
+<h3 data-number="3.0.1"><span class="header-section-number">3.0.1</span>
 Heading1</h3>
 <p>text</p>
+<section data-number="0.0.1.1">
 <h4 data-number="3.0.1.1"><span
 class="header-section-number">3.0.1.1</span> Heading2</h4>
 <p>text</p>
+</section>
+</section>
