--- a/src/Tests/Tests.BinaryToText.verified.html
+++ b/src/Tests/Tests.BinaryToText.verified.html
@@ -1,30 +1,12 @@
-﻿<h1
-id="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit.-nunc-ac-faucibus-odio.">Lorem
-ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac faucibus
-odio. </h1>
-<p>Vestibulum neque massa, scelerisque sit amet ligula eu, congue
-molestie mi. Praesent ut varius sem. Nullam at porttitor arcu, nec
-lacinia nisi. Ut ac dolor vitae odio interdum condimentum.
-<strong>Vivamus dapibus sodales ex, vitae malesuada ipsum cursus
-convallis. Maecenas sed egestas nulla, ac condimentum orci.</strong>
-Mauris diam felis, vulputate ac suscipit et, iaculis non est. Curabitur
-semper arcu ac ligula semper, nec luctus nisl blandit. Integer lacinia
-ante ac libero lobortis imperdiet. <em>Nullam mollis convallis ipsum, ac
-accumsan nunc vehicula vitae.</em> Nulla eget justo in felis tristique
-fringilla. Morbi sit amet tortor quis risus auctor condimentum. Morbi in
-ullamcorper elit. Nulla iaculis tellus sit amet mauris tempus
-fringilla.</p>
-<p>Maecenas mauris lectus, lobortis et purus mattis, blandit dictum
-tellus.</p>
+﻿<h1 id="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit.-nunc-ac-faucibus-odio.">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac faucibus odio. </h1>
+<p>Vestibulum neque massa, scelerisque sit amet ligula eu, congue molestie mi. Praesent ut varius sem. Nullam at porttitor arcu, nec lacinia nisi. Ut ac dolor vitae odio interdum condimentum. <strong>Vivamus dapibus sodales ex, vitae malesuada ipsum cursus convallis. Maecenas sed egestas nulla, ac condimentum orci.</strong> Mauris diam felis, vulputate ac suscipit et, iaculis non est. Curabitur semper arcu ac ligula semper, nec luctus nisl blandit. Integer lacinia ante ac libero lobortis imperdiet. <em>Nullam mollis convallis ipsum, ac accumsan nunc vehicula vitae.</em> Nulla eget justo in felis tristique fringilla. Morbi sit amet tortor quis risus auctor condimentum. Morbi in ullamcorper elit. Nulla iaculis tellus sit amet mauris tempus fringilla.</p>
+<p>Maecenas mauris lectus, lobortis et purus mattis, blandit dictum tellus.</p>
 <ul>
-<li><p><strong>Maecenas non lorem quis tellus placerat
-varius.</strong></p></li>
+<li><p><strong>Maecenas non lorem quis tellus placerat varius.</strong></p></li>
 <li><p><em>Nulla facilisi.</em></p></li>
 <li><p><u>Aenean congue fringilla justo ut aliquam.</u></p></li>
-<li><p><a href="https://products.office.com/en-us/word"><u>Mauris id ex
-erat.</u></a> Nunc vulputate neque vitae justo facilisis, non
-condimentum ante sagittis.</p></li>
+<li><p><a href="https://products.office.com/en-us/word"><u>Mauris id ex erat.</u></a> Nunc vulputate neque vitae justo facilisis, non condimentum ante sagittis.</p></li>
 <li><p>Morbi viverra semper lorem nec molestie.</p></li>
-<li><p>Maecenas tincidunt est efficitur ligula euismod, sit amet ornare
-est vulputate.</p></li>
+<li><p>Maecenas tincidunt est efficitur ligula euismod, sit amet ornare est vulputate.</p></li>
 </ul>
+<p><span class="chart">[CHART]</span></p>
