--- a/src/Tests/Samples.Streams.Linux.verified.html
+++ b/src/Tests/Samples.Streams.Linux.verified.html
@@ -1,3 +1,4 @@
 ﻿<pre><code># code block
 print &#39;3 backticks or&#39;
-print &#39;indent 4 spaces&#39;</code></pre>
+print &#39;indent 4 spaces&#39;
+</code></pre>
